[tool.poetry]
name = "tr-rm"
version = "0.1.0"
description = ""
authors = ["Alexandre Bulté <alexandre@bulte.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tr_rm"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
dataset = "^1.6.0"
minicli = "^0.5.1"
toml = "^0.10.2"
sqlalchemy = "<2.0"
tabulate = "^0.9.0"
dataclass-csv = "^1.4.0"
flask = "^2.2.3"
gunicorn = "^20.1.0"

[tool.poetry.scripts]
tr_rm = "tr_rm.cli:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-httpx = "^0.21.3"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
filterwarnings = "ignore:.*SQLAlchemy 2.0.*:DeprecationWarning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
